--- a/workflow/configs_species/C.diff.yaml
+++ b/workflow/configs_species/C.diff.yaml
@@ -35,7 +35,7 @@ alignment_database:
         kma_index_flag: serotypefinder_db
 
     SRST2:
-        bowtie2_index_flag: MLST/Clostridium/
+        bowtie2_index_flag: MLST_Clostridium
 
 analyses_to_run: 
 
@@ -197,5 +197,5 @@ analyses_to_run:
         status: False
         species: clostridium
         species_key: C.diff
-        scheme: Giffiths_MLST
+        scheme: Griffiths_MLST
         genes: ["adk","atpA","dxr","glyA","recA","sodA","tpi"]
