--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -43,20 +43,19 @@ unmapped_species = {
     if row['organism'] not in species_name_map
 }
 if unmapped_species:
-    warnings.warn(f"The following species are not mapped in config['species_map']: {unmapped_species}", UserWarning)
+    warnings.warn("The following species are not mapped in config['species_map']: %s" % unmapped_species, UserWarning)
 
 # ------------------ Load Species-Specific Configs ------------------
 
 species_configs = {}
 for species in set(sample_to_organism.values()):
-    species_config_path = SPECIES_PATH + f"{species}.yaml"
+    species_config_path = "%s%s.yaml" % (SPECIES_PATH, species)
     if os.path.exists(species_config_path):
         with open(species_config_path, "r") as species_config_file:
             species_configs[species] = yaml.load(species_config_file, 
                                                  Loader=yaml.Loader)
     else: # means the config is not found / available
-        warnings.warn(f"Warning: Configuration file {species_config_path} not found. \
-                        Skipping analyses for {species}.", UserWarning)
+        warnings.warn("Warning: Configuration file %s not found. Skipping analyses for %s." % (species_config_path, species), UserWarning)
         species_configs[species] = {}  # Empty config to ensure skipping analyses
 
 
@@ -77,7 +76,7 @@ ASM_TO_REPEAT_IDENTIFICATION = ["spades","skesa"]
 rule all:
     input:
         expand(
-            f"{OUT_FOLDER}" + "/{sample}/kmeraligner/{sample}.res",
+            "%s/{sample}/kmeraligner/{sample}.res" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES
                 if species_configs[sample_to_organism[s]]["analyses_to_run"].get("kmeraligner", {}).get("status", False)
