--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -79,144 +79,119 @@ rule all:
             "%s/{sample}/kmeraligner/{sample}.res" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES
-                if species_configs[sample_to_organism[s]]["analyses_to_run"].get("kmeraligner", {}).get("status", False)
+                if "kmeraligner" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ]
         ),
         expand(
             "%s/{sample}/KMA_results/{sample}_KMA.tsv" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES
-                if "KMA_filter" in species_configs[sample_to_organism[s]]["analyses_to_run"] and
-                species_configs[sample_to_organism[s]]["analyses_to_run"]["KMA_filter"].get("status", False)
+                if "KMA_filter" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ]
         ),
         expand(
             "%s/{sample}/spades/contigs.fasta" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["spades"]["status"] is True
+                if "spades" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ]
         ),
         expand(
             "%s/{sample}/skesa/{sample}.contigs.fasta" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["skesa"]["status"] is True
+                if "skesa" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ]
         ),
         expand(
-            "%s/{sample}/emm_typing/" %OUT_FOLDER, 
+            "%s/{sample}/PlasmidFinder/" % OUT_FOLDER,
             sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["emm_typing"]["status"] is True
-            ]
-        ),       
-        expand(
-            "%s/{sample}/assembly_lineage/" %OUT_FOLDER, 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["assembly_lineage_determination"]["status"] is True
+                s for s in SAMPLES
+                if "plasmidfinder" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ]
         ),
         expand(
-            "%s/{sample}/PlasmidFinder/" %OUT_FOLDER, 
+            "%s/{sample}/ResFinder/" % OUT_FOLDER,
             sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["plasmidfinder"]["status"] is True
+                s for s in SAMPLES
+                if "resfinder" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ]
         ),
         expand(
-            "%s/{sample}/ResFinder/" %OUT_FOLDER, 
+            "%s/{sample}/VirulenceFinder/" % OUT_FOLDER,
             sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["resfinder"]["status"] is True
+                s for s in SAMPLES
+                if "virulencefinder" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ]
         ),
         expand(
-            "%s/{sample}/VirulenceFinder/" %OUT_FOLDER, 
+            "%s/{sample}/lre-finder/" % OUT_FOLDER,
             sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["virulencefinder"]["status"] is True
+                s for s in SAMPLES
+                if "LRE-finder" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ]
         ),
         expand(
-            "%s/{sample}/lre-finder/" %OUT_FOLDER, 
+            "%s/{sample}/SerotypeFinder/" % OUT_FOLDER,
             sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["LRE-finder"]["status"] is True
+                s for s in SAMPLES
+                if "serotypefinder" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ]
         ),
         expand(
-            "%s/{sample}/SerotypeFinder/" %OUT_FOLDER, 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["serotypefinder"]["status"] is True
-            ]
-        ),
-        expand(
-            "%s/{sample}/AMRFinder/AMR_{assembler}_{sample}.tsv" %OUT_FOLDER,
+            "%s/{sample}/AMRFinder/AMR_{assembler}_{sample}.tsv" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES for assembler in ASM_TO_REPEAT_IDENTIFICATION
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["amrfinder"]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"][assembler]["status"] is True
-            ], # creates a list of samples needed to match with each assembly -> e.g ["SRR1", "SRR1", "SRR2", "SRR2"]
+                if "amrfinder" in species_configs[sample_to_organism[s]]["analyses_to_run"]
+                and assembler in species_configs[sample_to_organism[s]]["analyses_to_run"]
+            ],
             assembler=[
                 assembler for s in SAMPLES for assembler in ASM_TO_REPEAT_IDENTIFICATION
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["amrfinder"]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"][assembler]["status"] is True
-            ] # creates a list of assembly tools needed to match with each sample -> e.g ["spades", "skesa","spades", "skesa"] to create all combinations of samples and assembly tools
-        ),
-        expand(
-            "{out}/{sample}/MLST", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["mlst"]["status"] is True
-            ],
-            out=OUT_FOLDER
+                if "amrfinder" in species_configs[sample_to_organism[s]]["analyses_to_run"]
+                and assembler in species_configs[sample_to_organism[s]]["analyses_to_run"]
+            ]
         ),
         expand(
             "%s/{sample}/Repeat_identifier/{assembler}_{sample}_repeat.tsv" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES for assembler in ASM_TO_REPEAT_IDENTIFICATION
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["Repeat_identifier"]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"][assembler]["status"] is True
-            ], # creates a list of samples needed to match with each assembly -> e.g ["SRR1", "SRR1", "SRR2", "SRR2"]
+                if "Repeat_identifier" in species_configs[sample_to_organism[s]]["analyses_to_run"]
+                and assembler in species_configs[sample_to_organism[s]]["analyses_to_run"]
+            ],
             assembler=[
                 assembler for s in SAMPLES for assembler in ASM_TO_REPEAT_IDENTIFICATION
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["Repeat_identifier"]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"][assembler]["status"] is True
-            ] # creates a list of assembly tools needed to match with each sample -> e.g ["spades", "skesa","spades", "skesa"] to create all combinations of samples and assembly tools
+                if "Repeat_identifier" in species_configs[sample_to_organism[s]]["analyses_to_run"]
+                and assembler in species_configs[sample_to_organism[s]]["analyses_to_run"]
+            ]
         ),
         expand(
-            "{folder}/{sample}/FilteredBAM/{sample}.{tool}.filtered.sorted.bam.bai",
-            folder=OUT_FOLDER,
+            "%s/{sample}/FilteredBAM/{sample}.{tool}.filtered.sorted.bam.bai" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES
                 for tool in TOOLS_WITH_SAM_OUTPUT
-                if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_idx"]["status"] is True
+                if tool in species_configs[sample_to_organism[s]]["analyses_to_run"]
+                and "samtools_idx" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ],
             tool=TOOLS_WITH_SAM_OUTPUT
         ),
         expand(
-            "{folder}/{sample}/GenotypeCalls/{sample}.{tool}.{tag}.bcf.csi",
-            folder=OUT_FOLDER,
+            "%s/{sample}/GenotypeCalls/{sample}.{tool}.{tag}.bcf.csi" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES
                 for tool in TOOLS_WITH_SAM_OUTPUT
-                if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["bcftools_index"]["status"] is True
+                if tool in species_configs[sample_to_organism[s]]["analyses_to_run"]
+                and "bcftools_index" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ],
             tool=TOOLS_WITH_SAM_OUTPUT,
-            tag=["calls", "indels"]  #this enables indexing of all bcf files
+            tag=["calls", "indels"]
         ),
         expand(
             "%s/{sample}/GenotypeCalls/{sample}.{tool}.calls.bcf" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES
                 for tool in TOOLS_WITH_SAM_OUTPUT
-                if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["bcftools_call"]["status"] is True
+                if tool in species_configs[sample_to_organism[s]]["analyses_to_run"]
+                and "bcftools_call" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ],
             tool=TOOLS_WITH_SAM_OUTPUT
         ),
@@ -225,8 +200,8 @@ rule all:
             sample=[
                 s for s in SAMPLES
                 for tool in TOOLS_WITH_SAM_OUTPUT
-                if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["bcftools_view_filter"]["status"] is True
+                if tool in species_configs[sample_to_organism[s]]["analyses_to_run"]
+                and "bcftools_view_filter" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ],
             tool=TOOLS_WITH_SAM_OUTPUT
         ),
@@ -235,8 +210,8 @@ rule all:
             sample=[
                 s for s in SAMPLES
                 for tool in TOOLS_WITH_SAM_OUTPUT
-                if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["Variant_detection"]["status"] is True
+                if tool in species_configs[sample_to_organism[s]]["analyses_to_run"]
+                and "Variant_detection" in species_configs[sample_to_organism[s]]["analyses_to_run"]
             ],
             tool=TOOLS_WITH_SAM_OUTPUT
         ),
@@ -245,3 +220,25 @@ include : "rules/db_setups.smk"
 include : "rules/finders.smk"
 include : "rules/characterizers.smk"
 include : "rules/others.smk"
+
+#        expand(
+#           "%s/{sample}/emm_typing/" % OUT_FOLDER,
+#            sample=[
+#                s for s in SAMPLES
+#                if "emm_typing" in species_configs[sample_to_organism[s]]["analyses_to_run"]
+#            ]
+#        ),
+#        expand(
+#            "%s/{sample}/assembly_lineage/" % OUT_FOLDER,
+#            sample=[
+#                s for s in SAMPLES
+#                if "assembly_lineage_determination" in species_configs[sample_to_organism[s]]["analyses_to_run"]
+#            ]
+#        ),
+#        expand(
+#            "%s/{sample}/MLST" % OUT_FOLDER,
+#            sample=[
+#                s for s in SAMPLES
+#                if "mlst" in species_configs[sample_to_organism[s]]["analyses_to_run"]
+#            ]
+#       ),
