--- a/workflow/configs_species/E.coli.yaml
+++ b/workflow/configs_species/E.coli.yaml
@@ -40,6 +40,7 @@ analyses_to_run:
         Title : Kmer Aligner on two pair reads
         ID: 90
         additional_option :  -nc -ref_fsa -nf -sam 4
+        status: True
 
     KMA_filter:
         Title : Kmer Aligner for Escherichia coli OH and stx typing
@@ -57,59 +58,44 @@ analyses_to_run:
             eae: [90, 90, 10]
             ehxA: [90, 90, 10]
             other: [98, 98, 10]
+        status: True
 
     virulence_gene_detection: 
         Title: Presence of Streptococcal virulence genes from the Virulence Factor Database
+        status: False
 
     plasmidfinder: 
         Title : Plasmidfinder
         database: resources/plasmidfinder_db/  # Path to PlasmidFinder database
+        status: False
 
     resfinder: 
         Title : Resfinder
         resfinder_db: resources/resfinder_db/ # ResFinder database for AMR detection
         pointfinder_db: resources/pointfinder_db/  # PointFinder database for AMR point mutations
         disinfinder_db: resources/disinfinder_db/  # DisinFinder database for disinfectant resistance
+        status: False
 
     virulencefinder : 
         Title : Virulence finder
         database: resources/virulencefinder_db  # VirulenceFinder database
+        status: False
 
     serotypefinder :
         Title : Serotypefinder
         database: resources/serotypefinder_db/  # SerotypeFinder database
-    
+        status: False
+
     amrfinder:
         Title : NCBI resistance gene finder
         organism: --organism Escherichia # Leave blank or insert --organism alongside one of the supported organisms, listed here: https://github.com/evolarjun/amr/wiki/Curated-organisms
         wrangler: workflow/scripts/AMR_wrangler.py
+        status: False
 
     spades:
         Title : spades assembly
+        status: False
 
     skesa:
         Title : skesa assembly
-
-
-#    emm_typing: 
-#       Title: Typing of M protein gene using blast against CDC curated alleles
-#        cov_threshold: 90
-#        emm_allele_file: resources/emm_typing/emm_alleles.fasta  # Fasta file with emm alleles
-#        emm_cluster_file: resources/emm_typing/emm_enn_mrp_subgroups.txt  # File with emm allele clusters
-#        
-#    assembly_lineage_determination: 
-#        Title: Lineage determination based on presence of specified SNPs when mapping genome assembly against reference genome
-#        percent_snp_threshold: 50
-#        nucmerargs : "\"\""
-#        deltafilterargs : "\"-q -r -o 100\""
-#        reference_fasta_file: resources/lineage_determination/MGAS5005.fasta
-#        lineage_variant_file: resources/lineage_determination/Spyogenes_LOCs.tsv
-#        
-#    mlst:
-#        Title : MLST by Torsten Seeman
-#
-#    LRE-finder: 
-#        Title : LRE-Finder
-#        min_consensus_ID : 80
-#        additional_option : -1t1 -cge -matrix
-#        database: resources/lre-finder_db/elm  # Database for LRE-finder
+        status: True
